docs/2.1/_sources/user-guide/model-gallery/spectral/plot_powerlaw_norm_spectral.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/model-gallery/spectral/plot_powerlaw_norm_spectral.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_user-guide_model-gallery_spectral_plot_powerlaw_norm_spectral.py>`
        to download the full example code or to run this example in your browser via Binder.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_model-gallery_spectral_plot_powerlaw_norm_spectral.py:


.. _powerlaw-spectral-norm-model:

Power law norm spectral model
=============================

This model parametrises a power law spectral correction with a norm and tilt parameter.

.. GENERATED FROM PYTHON SOURCE LINES 12-15

Example plot
------------
Here is an example plot of the model:

.. GENERATED FROM PYTHON SOURCE LINES 15-41

.. code-block:: Python


    from astropy import units as u
    import matplotlib.pyplot as plt
    from gammapy.modeling.models import (
        Models,
        PowerLawNormSpectralModel,
        SkyModel,
        TemplateSpectralModel,
    )

    energy_bounds = [0.1, 100] * u.TeV

    energy = [0.3, 1, 3, 10, 30] * u.TeV
    values = [40, 30, 20, 10, 1] * u.Unit("TeV-1 s-1 cm-2")
    template = TemplateSpectralModel(energy, values)
    norm = PowerLawNormSpectralModel(
        norm=5,
        reference=1 * u.TeV,
    )

    template.plot(energy_bounds=energy_bounds, label="Template model")
    pwl_norm = template * norm
    pwl_norm.plot(energy_bounds, label="Template model with PowerLaw norm correction")
    plt.legend(loc="best")
    plt.grid(which="both")




.. image-sg:: /user-guide/model-gallery/spectral/images/sphx_glr_plot_powerlaw_norm_spectral_001.png
   :alt: plot powerlaw norm spectral
   :srcset: /user-guide/model-gallery/spectral/images/sphx_glr_plot_powerlaw_norm_spectral_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/gammapy-docs/gammapy-docs/gammapy/.tox/build_docs/lib/python3.11/site-packages/gammapy/modeling/models/spectral.py:650: UserWarning: This axis already has a converter set and is updating to a potentially incompatible converter
      ax.plot(energy.center, flux.quantity[:, 0, 0], **kwargs)




.. GENERATED FROM PYTHON SOURCE LINES 42-45

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 45-50

.. code-block:: Python


    model = SkyModel(spectral_model=pwl_norm, name="power-law-norm-model")
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    components:
    -   name: power-law-norm-model
        type: SkyModel
        spectral:
            type: CompoundSpectralModel
            model1:
                type: TemplateSpectralModel
                parameters: []
                energy:
                    data:
                    - 0.3
                    - 1.0
                    - 3.0
                    - 10.0
                    - 30.0
                    unit: TeV
                values:
                    data:
                    - 40.0
                    - 30.0
                    - 20.0
                    - 10.0
                    - 1.0
                    unit: 1 / (TeV s cm2)
            model2:
                type: PowerLawNormSpectralModel
                parameters:
                -   name: tilt
                    value: 0.0
                -   name: norm
                    value: 5.0
                -   name: reference
                    value: 1.0
                    unit: TeV
            operator: mul
    metadata:
        creator: Gammapy 2.1
        date: '2026-04-02T13:57:45.013725'
        origin: null






.. _sphx_glr_download_user-guide_model-gallery_spectral_plot_powerlaw_norm_spectral.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: binder-badge

      .. image:: images/binder_badge_logo.svg
        :target: https://mybinder.org/v2/gh/gammapy/gammapy-webpage/v2.1?urlpath=lab/tree/notebooks/2.1/user-guide/model-gallery/spectral/plot_powerlaw_norm_spectral.ipynb
        :alt: Launch binder
        :width: 150 px

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_powerlaw_norm_spectral.ipynb <plot_powerlaw_norm_spectral.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_powerlaw_norm_spectral.py <plot_powerlaw_norm_spectral.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_powerlaw_norm_spectral.zip <plot_powerlaw_norm_spectral.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
